Added replay data information in download response. Added full replay information in the get all replays route. Updated DOCS.
